feat: Added animation and fixed hover bug on language switch buttons Details: Created animation for images (fade-in and slide effect) in animation.directive.ts. Also fixed a bug affecting the hover effect of the language switch buttons.

--- a/src/app/main-conten/about/about.component.html
+++ b/src/app/main-conten/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
   <div class="abot-left">
-    <div class="img-container">
+    <div class="img-container fade-in-left" appScrollAnimation>
       <img src="assets/img/b-img2.png" alt="" />
     </div>
   </div>
