--- a/src/app/main-conten/hero/hero.component.html
+++ b/src/app/main-conten/hero/hero.component.html
@@ -12,7 +12,7 @@
       <h1 class="margin-R margin-L">Felix Geiss</h1>
     </div>
   </div>
-  <div class="img-container">
+  <div class="img-container fade-in-right"appScrollAnimation>
     <img src="assets/img/b-img1.png" alt="Illustration of frontend development" />
   </div>
 </header>
