--- a/src/app/main-conten/projects/projects.component.scss
+++ b/src/app/main-conten/projects/projects.component.scss
@@ -75,6 +75,31 @@ h5{
     
   }
 }
+
+
+.fade-in-left {
+  opacity: 0;
+  transform: translateX(-100px);               
+  transition: opacity 125ms ease-out,
+              transform 125ms ease-out;
+}
+.fade-in-left.in-view {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+
+.fade-in-right {
+  opacity: 0;
+  transform: translateX(100px);                
+  transition: opacity 125ms ease-out,
+              transform 125ms ease-out;
+}
+.fade-in-right.in-view {
+  opacity: 1;
+  transform: translateX(0);
+}
+
 @media (max-width: 768px) {
 
   h1 {
