feat(responsive): adjust layout for various screen sizes

--- a/src/app/legal-notice/legal-notice.component.scss
+++ b/src/app/legal-notice/legal-notice.component.scss
@@ -5,7 +5,7 @@
   width: 100%;
   margin-top: 7rem;
   height: calc(100vh - 7rem - 12.25rem);
-  min-height: 462px;
+  min-height: 36.25rem;
   max-width: $max-width;
 }
 
