--- a/src/app/main-conten/about/about.component.html
+++ b/src/app/main-conten/about/about.component.html
@@ -7,11 +7,11 @@
   <div class="about-right">
     <div>
       <h2 id="about" [innerHTML]="safe.whyMeTitle"></h2>
-      <p [innerHTML]="safe.whyMeText" class="margin-L margin-R"></p>
+      <p [innerHTML]="safe.whyMeText" class=""></p>
     </div>
     <div class="icon-container">
       <div>
-        <div class="maobile-arrow-curve-left w-90">
+        <div class="maobile-arrow-curve-left">
           <img src="assets/img/arrow-curve-left .svg" alt="arrow curve left icon">
         </div>
         <h3 [innerHTML]="safe.iAm"></h3>
@@ -48,19 +48,19 @@
           <p [innerHTML]="safe.openRemote">
           </p>
           <img
-            class="arrow-curve-right"
+            class="arrow-curve-right display-none"
             src="assets/img/arrow-curve-right.svg"
             alt="arrow curve right icon"
           />
         </div>
 
-        <img class="arrow-curly" src="assets/img/arrow-curly.svg" alt="arrow curly icon" /><img
+        <img class="arrow-curly display-none " src="assets/img/arrow-curly.svg" alt="arrow curly icon" /><img
           src=""
           alt=""
         />
       </div>
     </div>
-    <div class="maobile-arrow-curve-right w-90">
+    <div class="maobile-arrow-curve-right">
       <img src="assets/img/arrow-curve-right.svg" alt="arrow icon">
     </div>
     <div><a href="#contact" [innerHTML]="safe.letsTalk"></a></div>
