--- a/src/app/main-conten/hero/hero.component.html
+++ b/src/app/main-conten/hero/hero.component.html
@@ -1,15 +1,15 @@
 <header>
   <div class="hero-left">
-    <div>
-      <a href="#contact" [innerHTML]="safeContactME"></a>
+    <div class="hero-contact-container">
+      <a class="hero-contact" href="#contact" [innerHTML]="safeContactME"></a>
 
       <div class="arrow-container">
         <a class="icon" href="#about"></a>
       </div>
     </div>
     <div class="hero-text">
-      <h2 class="margin-R margin-L">FRONTEND DEVELOPER</h2>
-      <h1 class="margin-R margin-L">Felix Geiss</h1>
+      <h2 class="">FRONTEND DEVELOPER</h2>
+      <h1 class="">Felix Geiss</h1>
     </div>
   </div>
   <div class="img-container fade-in-right"appScrollAnimation>
