--- a/src/app/main-conten/skills/skills.component.html
+++ b/src/app/main-conten/skills/skills.component.html
@@ -50,7 +50,7 @@
     </div>
   </div>
 
-  <div class="mobile-challenge-me show margin-L margin-R">
+  <div class="mobile-challenge-me show">
     <img src="assets/img/arrow-mobile.svg" alt="" />
     <p [innerHTML]="safe.ChallengeMeContent"></p>
     <div><a href="#contact" [innerHTML]="safe.letsTalk"></a></div>
