--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -19,9 +19,9 @@
 </div>
 
 
-  <div class="icon-container">
+  <div class="icon-container-footer">
     <a
-      href="https://gist.github.com/FelixGeiss"
+      href="https://github.com/FelixGeiss"
       target="_blank"
       rel="noopener noreferrer"
     >
