--- a/src/app/main-conten/hero/hero.component.scss
+++ b/src/app/main-conten/hero/hero.component.scss
@@ -4,7 +4,6 @@
 :host {
   @include flex-center();
   width: 100%;
-  height: 100%;
   margin-top: 5.875rem;
   margin-bottom: 10rem;
   box-sizing: border-box;
@@ -13,7 +12,6 @@ header {
   @include flex-center($ai: space-between, $jc: space-between);
   position: relative;
   max-width: $max-width;
-  gap: $gap-100;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -30,6 +28,7 @@ header {
   > div:nth-child(1) {
     @include flex-center($jc: space-between);
     width: 100%;
+    min-height: 200px;
 
     > div:nth-child(2) {
       height: 100%;
@@ -60,6 +59,7 @@ header {
 
   > div:nth-child(2) {
     @include flex-center($fd: column, $jc: flex-end, $ai: flex-start);
+    width: 100%;
   }
 }
 
@@ -70,63 +70,92 @@ a {
   padding: 0.625rem 0.9375rem;
   transform: rotate(-90deg);
   text-decoration: none;
-
+  transition: all 125ms ease-out;
   &:hover {
     color: $turquoise;
   }
 }
 
 .img-container {
-  width: 25rem;
-
-
+  
   img {
-    width: 100%;
-    height: 100%;
+    height: calc(100vh - 7rem);
     object-fit: cover;
-    object-position: top;
+    max-height: 800px;
   }
 }
 
 h1 {
   @include fonts($fs: $f-s-82, $fc: $turquoise);
+  white-space: nowrap;
+  text-align: left;
 }
+
 h2 {
   @include fonts($fc: $turquoise);
   white-space: nowrap;
+  text-align: left;
 }
 
 .fade-in-left {
   opacity: 0;
-  transform: translateX(-100px);               
-  transition: opacity 125ms ease-out,
-              transform 125ms ease-out;
+  transform: translateX(-100px);
+  transition: opacity 125ms ease-out, transform 125ms ease-out;
 }
 .fade-in-left.in-view {
   opacity: 1;
   transform: translateX(0);
 }
 
-
 .fade-in-right {
   opacity: 0;
-  transform: translateX(100px);                
-  transition: opacity 125ms ease-out,
-              transform 125ms ease-out;
+  transform: translateX(100px);
+  transition: opacity 125ms ease-out, transform 125ms ease-out;
 }
 .fade-in-right.in-view {
   opacity: 1;
   transform: translateX(0);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1200px) {
+  header {
+    min-height: calc(100vh - 7rem);
+    flex-direction: column-reverse !important;
+    align-items: center !important;
+    margin: 0 3rem;
+    .img-container {
+     
+      img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%!important;
+      }
+    }
 
-  h1 {
-    white-space: normal !important;
-    text-align: center !important;
+    .icon {
+      display: none !important;
+    }
+    .hero-contact-container {
+      display: none !important;
+    }
+    .hero-contact {
+      display: none !important;
+    }
+    .hero-text {
+      align-items: center !important;
+    }
+    .hero-left {
+      width: fit-content;
+    }
   }
+}
+
+@media (max-width: 768px) {
+  h1,
   h2 {
+    margin: 0 1rem;
     white-space: normal !important;
+    overflow-wrap: break-word !important;
     text-align: center !important;
   }
 }
