--- a/src/app/main-conten/projects/projects.component.html
+++ b/src/app/main-conten/projects/projects.component.html
@@ -1,11 +1,7 @@
 <ng-container *ngFor="let project of displayedProjects">
-  <div
-    class="project-container"
-  >
-    <div class="image-container fade-in-left"
-    appScrollAnimation
-    >
-      <a [href]="project.liveTestLink" target="_blank">
+  <div class="project-container">
+    <div class="image-container fade-in-left" appScrollAnimation>
+      <a class="video" [href]="project.liveTestLink" target="_blank">
         <video
           #hoveredVideo
           muted
@@ -14,20 +10,32 @@
           (mouseleave)="resetVideo(hoveredVideo)"
         >
           <source [src]="project.videoUrl" type="video/webm" />
-          Dein Browser unterstützt das Video-Tag nicht.
+          Your browser does not support the video tag.
         </video>
       </a>
     </div>
-    <div class="text-container-project fade-in-right "
-    appScrollAnimation
-    >
+    <div class="text-container-project fade-in-right" appScrollAnimation>
       <h3>{{ project.title }}</h3>
-      <h5 class="technologies margin-R margin-L">
-        {{ project.technologies.join(' | ') }}
+      <h5 class="technologies">
+        {{ project.technologies.join(" | ") }}
       </h5>
-      <h5 class="description margin-R margin-L">
+      <h5 class="description">
         {{ project.description }}
       </h5>
+      <div class="image-container fade-in-left" appScrollAnimation>
+        <a class="mobile-video" [href]="project.liveTestLink" target="_blank">
+          <video
+            #mobileVideo
+            muted
+            preload="metadata"
+            (mouseenter)="playVideo(hoveredVideo)"
+            (mouseleave)="resetVideo(hoveredVideo)"
+          >
+            <source [src]="project.videoUrl" type="video/webm" />
+            Your browser does not support the video tag.
+          </video>
+        </a>
+      </div>
       <div class="links">
         <a [href]="project.githubLink" target="_blank">GitHub</a>
         <a [href]="project.liveTestLink" target="_blank">Live Test</a>
