--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -12,10 +12,11 @@ $font-stack: 'Helvetica Neue', Arial, sans-serif;
 
 :host {
     width: 100%;
-    height: 100%;
     max-width: $max-width;
     margin-top: 6rem;
-  
+    width: 100%;
+    height: calc(100vh - 6rem - 12.25rem);
+    min-height: 880px
   }
 
 $primary-color: #333;
