fix(legal-notice): guard template with ngIf to prevent undefined data errors

--- a/src/app/legal-notice/legal-notice.component.html
+++ b/src/app/legal-notice/legal-notice.component.html
@@ -1,5 +1,5 @@
 
-<div class="imprintContainer">
+<div class="imprintContainer" *ngIf="data">
   <div class="imprint">
     <h2>{{ data.title }}</h2>
 
