--- a/src/app/main-conten/contact/contact.component.html
+++ b/src/app/main-conten/contact/contact.component.html
@@ -11,7 +11,7 @@
 </div>
 
 <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
-  <div class="form-left">
+  <div class="form-left fade-in-left "appScrollAnimation>
     <p class="" [innerHTML]="safeContent"></p>
 
     <div class="input-wrapper">
@@ -72,7 +72,7 @@
     </div>
   </div>
 
-  <div class="form-right">
+  <div class="form-right fade-in-right"appScrollAnimation>
     <div class="mail-tel display-none">
       <div>
         <a href="mailto:geissq@gmail.com">
@@ -137,7 +137,7 @@
 
   <div>
     <div class="arrow-container show">
-      <a class="icon" href="#"></a>
+      <a class="icon show" href="#"></a>
     </div>
   </div>
   <div class="mail-tel-mobile show">
