--- a/src/app/main-conten/contact/contact.component.scss
+++ b/src/app/main-conten/contact/contact.component.scss
@@ -42,6 +42,7 @@ form {
   flex-wrap: wrap;
   padding: 2rem 0;
   position: relative;
+  overflow-x: hidden;
 
   .form-left {
     @include flex-center($fd: column, $ai: flex-start, $jc: space-between);
@@ -341,4 +342,24 @@ textarea.error::placeholder {
     color: #f92103;
     
   }
+}
+
+.fade-in-left {
+  opacity: 0;
+  transform: translateX(-100px);
+  transition: opacity 125ms ease-out, transform 125ms ease-out;
+}
+.fade-in-left.in-view {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.fade-in-right {
+  opacity: 0;
+  transform: translateX(100px);
+  transition: opacity 125ms ease-out, transform 125ms ease-out;
+}
+.fade-in-right.in-view {
+  opacity: 1;
+  transform: translateX(0);
 }
