--- a/src/app/main-conten/skills/skills.component.scss
+++ b/src/app/main-conten/skills/skills.component.scss
@@ -25,7 +25,7 @@
 
 .skills-icons {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
   width: 100%;
   justify-items: center;
   gap: 3rem;
@@ -56,11 +56,16 @@
       left: 123%;
       text-align: left;
       width: 17.25rem;
-      display: none;
+    
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 125ms ease-out, visibility 0s linear 125ms;
     }
-
+    
     &:hover p {
-      display: block;
+      opacity: 1;
+      visibility: visible;
+      transition-delay: 0s;
     }
   }
 }
