--- a/src/app/main-conten/about/about.component.html
+++ b/src/app/main-conten/about/about.component.html
@@ -11,11 +11,11 @@
     </div>
     <div class="icon-container">
       <div>
-        <div class="maobile-arrow-curve-left">
+        <div class="maobile-arrow-curve-left ">
           <img src="assets/img/arrow-curve-left .svg" alt="arrow curve left icon">
         </div>
         <h3 [innerHTML]="safe.iAm"></h3>
-        <div class="locaishen-container display-flex">
+        <div class="locaishen-container display-flex fade-in-right"appScrollAnimation>
           <div>
             <img src="assets/img/locaishen-sign .svg" alt="locaishen icon" />
             <div class="elipse"></div>
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div>
-        <div class="suitcase-container display-flex">
+        <div class="suitcase-container display-flex fade-in-left " appScrollAnimation>
           <img
             class="arrow-curve-left"
             src="assets/img/arrow-curve-left .svg"
@@ -38,7 +38,7 @@
       </div>
 
       <div>
-        <div class="laptop display-flex">
+        <div class="laptop display-flex fade-in-right"appScrollAnimation>
           <img src="assets/img/remote-signal.svg" alt="remote signal icon" />
           <img
             class="signal"
