--- a/src/app/main-conten/contact/contact.component.html
+++ b/src/app/main-conten/contact/contact.component.html
@@ -1,6 +1,6 @@
-<div class="header-contact">
+<div class="header-contact" appScrollAnimation>
   <h2 id="contact" [innerHTML]="safeHeader"></h2>
-  <img src="assets/img/arrow-down.svg" alt="Down arrow icon" />
+  <img src="assets/img/arrow-down.svg" alt="Down arrow icon" class="arrow-icon" />
 </div>
 
 <div *ngIf="successMessage" class="feedback feedback--success">
