--- a/src/app/main-conten/about/about.component.scss
+++ b/src/app/main-conten/about/about.component.scss
@@ -6,7 +6,6 @@
   width: 100%;
   margin-bottom: 10rem;
   box-sizing: border-box;
-
 }
 
 .main-container {
@@ -16,10 +15,9 @@
   height: 100%;
 }
 .about-right {
-
   @include flex-center($fd: column, $ai: flex-end, $jc: space-between);
   width: 55%;
-  height:100% ;
+  height: 100%;
   > div:nth-child(1) {
     margin-bottom: 1.5rem;
   }
@@ -89,23 +87,20 @@
       background-repeat: no-repeat;
       width: 1.1875rem;
       height: 0.5rem;
-  
-      opacity: 0;                       
-      visibility: hidden;                
-      pointer-events: none;              
+
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
       transition: opacity 125ms ease-out, visibility 0s linear 125ms;
     }
-  
-   
-    &:hover .elipse {
-      opacity: 1;                          
-      visibility: visible;                
-      pointer-events: auto;              
-      transition-delay: 0s;                
-    }
-  
-  }
 
+    &:hover .elipse {
+      opacity: 1;
+      visibility: visible;
+      pointer-events: auto;
+      transition-delay: 0s;
+    }
+  }
 
   .suitcase-container {
     margin-left: 21.476563rem;
@@ -141,21 +136,19 @@
       margin-right: 1rem;
     }
 
- 
-  > img:nth-child(2) {
-    opacity: 0;
-    visibility: hidden;            
-    pointer-events: none;
-    transition: opacity 125ms ease-out, visibility 0s linear 125ms;
-  }
+    > img:nth-child(2) {
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
+      transition: opacity 125ms ease-out, visibility 0s linear 125ms;
+    }
 
-
-  &:hover > img:nth-child(2) {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
-    transition-delay: 0s;          
-  }
+    &:hover > img:nth-child(2) {
+      opacity: 1;
+      visibility: visible;
+      pointer-events: auto;
+      transition-delay: 0s;
+    }
 
     .signal {
       position: absolute;
@@ -204,21 +197,18 @@
 
 .fade-in-left {
   opacity: 0;
-  transform: translateX(-100px);               
-  transition: opacity 125ms ease-out,
-              transform 125ms ease-out;
+  transform: translateX(-100px);
+  transition: opacity 125ms ease-out, transform 125ms ease-out;
 }
 .fade-in-left.in-view {
   opacity: 1;
   transform: translateX(0);
 }
 
-
 .fade-in-right {
   opacity: 0;
-  transform: translateX(100px);                
-  transition: opacity 125ms ease-out,
-              transform 125ms ease-out;
+  transform: translateX(100px);
+  transition: opacity 125ms ease-out, transform 125ms ease-out;
 }
 .fade-in-right.in-view {
   opacity: 1;
@@ -227,7 +217,6 @@
 
 
 @media (max-width: 768px) {
-
   h1 {
     white-space: normal !important;
     text-align: center !important;
@@ -238,6 +227,6 @@
   }
   h3 {
     margin-bottom: 20px;
-   font-size:2.375rem !important;
+    font-size: 2.375rem !important;
   }
 }
