Optimized responsive design for mobile devices

--- a/src/app/main-conten/about/about.component.html
+++ b/src/app/main-conten/about/about.component.html
@@ -11,8 +11,8 @@
     </div>
     <div class="icon-container">
       <div>
-        <div class="maobile-arrow-curve-left ">
-          <img src="assets/img/arrow-curve-left .svg" alt="arrow curve left icon">
+        <div class="maobile-arrow-curve-left display-flex">
+          <img src="assets/img/arrow-curve-left .svg" alt="arrow curve left icon ">
         </div>
         <h3 [innerHTML]="safe.iAm"></h3>
         <div class="locaishen-container display-flex fade-in-right"appScrollAnimation>
