--- a/src/app/main-conten/hero/hero.component.scss
+++ b/src/app/main-conten/hero/hero.component.scss
@@ -7,14 +7,15 @@
   margin-top: 5.875rem;
   margin-bottom: 10rem;
   box-sizing: border-box;
+  height: calc(100vh - 6rem);
 }
 header {
   @include flex-center($ai: space-between, $jc: space-between);
   position: relative;
   max-width: $max-width;
-  width: 100%;
-  height: 100%;
   overflow: hidden;
+  height: 100%;
+  width: 100%;
 }
 
 .hero-left {
@@ -59,7 +60,7 @@ header {
 
   > div:nth-child(2) {
     @include flex-center($fd: column, $jc: flex-end, $ai: flex-start);
-    width: 100%;
+  
   }
 }
 
@@ -77,9 +78,7 @@ a {
 }
 
 .img-container {
-  
   img {
-    height: calc(100vh - 6rem);
     object-fit: cover;
     max-height: 800px;
   }
@@ -119,20 +118,19 @@ h2 {
 
 @media (max-width: 1200px) {
   header {
-    min-height: calc(100vh - 6rem);
     flex-direction: column-reverse !important;
     align-items: center !important;
-    justify-content: center!important;
-    margin: 0 1rem;
     .img-container {
-     
+      height: 50vh;
       img {
         object-fit: cover;
-        width: 100%;
-        height: 100%!important;
+
+        height: 100% !important;
       }
     }
-
+    .hero-text {
+      height: 100%;
+    }
     .icon {
       display: none !important;
     }
@@ -154,9 +152,22 @@ h2 {
 @media (max-width: 768px) {
   h1,
   h2 {
+ 
     margin: 0 1rem;
     white-space: normal !important;
     overflow-wrap: break-word !important;
     text-align: center !important;
   }
+
+  h1{
+    font-size: 4rem;
+  }
 }
+
+@media (min-width: 600px) and (max-width: 900px) 
+   and (min-height: 800px) and (max-height: 1400px) {
+    .img-container {
+      height: 100vh !important;
+    }
+}
+
