--- a/src/app/main-conten/projects/projects.component.scss
+++ b/src/app/main-conten/projects/projects.component.scss
@@ -77,6 +77,7 @@ h5{
 
 
 .fade-in-left {
+  overflow-x: hidden;
   opacity: 0;
   transform: translateX(-100px);               
   transition: opacity 125ms ease-out,
