--- a/src/app/main-conten/contact/contact.component.html
+++ b/src/app/main-conten/contact/contact.component.html
@@ -14,7 +14,7 @@
   <div class="form-left fade-in-left "appScrollAnimation>
     <p class="" [innerHTML]="safeContent"></p>
 
-    <div class="input-wrapper">
+    <div class="input-wrapper marin-b">
       <input
         type="text"
         formControlName="name"
