--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -15,7 +15,7 @@ $font-stack: 'Helvetica Neue', Arial, sans-serif;
     max-width: $max-width;
     margin-top: 6rem;
     width: 100%;
-    height: calc(100vh - 6rem - 12.25rem);
+    height:100%;
     min-height: 880px
   }
 
@@ -35,6 +35,7 @@ $max-width: 800px;
   font-family: $font-stack;
   color: $secondary-color;
   line-height: 1.6;
+  min-height: calc(100vh - 19.4rem);
 
 
   h1 {
