--- a/src/app/main-conten/contact/contact.component.scss
+++ b/src/app/main-conten/contact/contact.component.scss
@@ -324,6 +324,10 @@ textarea.error::placeholder {
   }
 }
 
+
+.input-wrapper{
+  margin-bottom: 2rem;
+}
 .contact-wrapper {
   max-width: 600px;
   margin: 0 auto;
