--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -35,7 +35,7 @@ $max-width: 800px;
   font-family: $font-stack;
   color: $secondary-color;
   line-height: 1.6;
-  min-height: calc(100vh - 19.4rem);
+  min-height: calc(100dvh - 19.4rem);
 
 
   h1 {
