--- a/src/app/main-conten/hero/hero.component.scss
+++ b/src/app/main-conten/hero/hero.component.scss
@@ -7,7 +7,7 @@
   margin-top: 5.875rem;
   margin-bottom: 10rem;
   box-sizing: border-box;
-  height: calc(100vh - 6rem);
+  height: calc(100dvh - 6rem);
 }
 header {
   @include flex-center($ai: space-between, $jc: space-between);
@@ -167,7 +167,7 @@ h2 {
 @media (min-width: 600px) and (max-width: 1024px) 
    and (min-height: 800px) and (max-height: 1400px) {
     .img-container {
-      height: 100vh !important;
+      height: 100dvh !important;
     }
 }
 
